--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,19 @@
-
+body{
+	color:white;
+	background-image: url('http://pnge.org/wp-content/uploads/2016/11/1480401932_951_abstract-wallpaper.jpg');
+}
+#title{
+	background-color:blue; 
+	text-align:center;
+}
+.individual-pet{
+	border-style: ridge;
+	border-color:green;
+	border-width:10px;
+	text-align: center;
+	font-size:130%;
+}
+#pet-image{
+	height:20%;
+	width:10%;
+}
